# amigo_force_controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  test.ops
include/: CurrentFFW.hpp
launch/: ethercat.launch  for_rightarm.launch  leftarm.launch  pos_rightarm.launch  rightarm.launch
ops/: GravTest.ops  currentffwtest.ops  right_arm_controller.ops  right_arm_controllerRQ2.ops  right_arm_controllerRQ5.ops  right_arm_controller_inertiascaling.ops  right_arm_controller_newjsdistributer.ops  right_arm_forcecontroller.ops  right_arm_forcecontrollerQ12.ops  soem.ops
ops/test/: GravTest.ops  left_arm_controller_motorchar_test.ops  left_arm_controller_motorchar_test_extended.ops  right_arm_controller.ops  sim_motor_char_test.ops  soemtest.ops
src/: CurrentFFW.cpp  CurrentFFW.hpp  MotorCharacteristics.cpp  MotorCharacteristics.hpp  TorqueFeedback.cpp  TorqueFeedback.hpp  UPF_TorqueFeedbackController.cpp  UPF_TorqueFeedbackController.hpp
